--- a/examples/dis-rw/CMakeLists.txt
+++ b/examples/dis-rw/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required (VERSION 3.1)
 project (disnvme)
 
-make_sample (uidentify uidentify "no_module.c")
+make_sample (dis_rw dis_rw "rw.c")
+set_sisci (dis_rw)
