--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -2,12 +2,8 @@
 ifneq ($(KERNELRELEASE),)
 	src := @module_root@
 	obj-m := @CMAKE_PROJECT_NAME@.o
-	
-ifneq (@nv_driver@,)
-	ccflags-y := -D_CUDA -I$(dir @nv_header@)
-	KBUILD_EXTRA_SYMBOLS := @nv_driver@
-endif
-
+	ccflags-y += @module_ccflags@
+	KBUILD_EXTRA_SYMBOLS := @module_symbols@
 else
 
 .PHONY: default reload unload load clean
