--- a/examples/identify/CMakeLists.txt
+++ b/examples/identify/CMakeLists.txt
@@ -3,5 +3,5 @@ project (disnvme)
 
 make_sample (userspace_identify userspace_identify "no_module.c")
 
-#make_sample (module_identify module_identify "with_module.c")
-#set_module_target (module_identify)
+make_sample (module_identify module_identify "with_module.c")
+set_module (module_identify)
