Hacky latency test

--- a/benchmarks/dis-latency/CMakeLists.txt
+++ b/benchmarks/dis-latency/CMakeLists.txt
@@ -6,4 +6,4 @@ find_package (Threads REQUIRED)
 
 find_package (CUDA 8.0 REQUIRED)
 
-make_sisci_benchmark (dis-latency-manager dis-latency-manager "manager.cu;segment.cu")
+make_sisci_benchmark (dis-latency-manager dis-latency-manager "manager.cu;segment.cu;transfer.cc")
