--- a/benchmarks/latency/CMakeLists.txt
+++ b/benchmarks/latency/CMakeLists.txt
@@ -6,4 +6,8 @@ find_package (Threads REQUIRED)
 
 find_package (CUDA 8.0 REQUIRED)
 
-make_sisci_benchmark (latency-benchmark latency-bench "main.cu;settings.cu;buffer.cu;ctrl.cc;queue.cc;barrier.cc;transfer.cc")
+make_sisci_benchmark (latency-benchmark-smartio latency-bench "main.cu;settings.cu;buffer.cu;ctrl.cc;queue.cc;barrier.cc;transfer.cc")
+
+make_benchmark (latency-benchmark-module latency-bench "main.cu;settings.cu;buffer.cu;ctrl.cc;queue.cc;barrier.cc;transfer.cc")
+
+make_benchmark_choice (latency-benchmark latency-benchmark-smartio latency-benchmark-module)
