Minor modifications to examples

--- a/examples/rpc/CMakeLists.txt
+++ b/examples/rpc/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package (Threads REQUIRED)
 make_sample (rpc-server rpc-server "rpc_server.c;util.c;segment.c")
 set_sisci (rpc-server)
 
-make_sample (rpc-client rpc-client "rpc_client.c;util.c;segment.c") 
+make_sample (rpc-client rpc-identify "rpc_client.c;util.c;segment.c") 
 set_sisci (rpc-client)
 
 add_custom_target(rpc DEPENDS rpc-server rpc-client)
